# agentix

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: demo_class_decorator.ipynb  demo_describe_tools.ipynb  temp_demo_file.py  workflow.ipynb
src/agentix/: __init__.py  agent.py  agentix_config.py  api_client.py  constants.py  file_utils.py  main.py  message.py  models.py  prompt_classification_response.py  prompts.py  query_payload.py  server.py  sessions.py  transforms.py
src/agentix/context/: __init__.py  context.py  message.py  prompts.py  sessions.py
src/agentix/next_steps/: __init__.py  escalate.py  invoke_planner.py  plan_steps.py  respond_directly.py  single_tool.py  take_steps.py
src/agentix/tools/: __init__.py  ast_tools.py  cst_tools.py  describe_tools.py
src/agentix/tools/describe_tools/: __init__.py  describe_tools_impl.py  tool_collector.py  tool_extractor.py  tool_spec.py  tools.py  utils.py
system_prompts/: classification.md  modifier_class_decorator.md  planner_prompt.md  prompt_classification.md  python_coder.md  structured_response.md
tests/: test_agentix_config.py  test_api_client.py  test_constants.py  test_describe_tools.py  test_file_utils.py  test_main.py  test_models.py  test_prompts.py  test_sessions.py  test_to_openai_tools.py
