[project]
name = "agentix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "black>=25.12.0",
    "consoleprinter",
    "cst>=1.2.0",
    "fastapi>=0.128.0",
    "flake8>=7.3.0",
    "future>=1.0.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "libcst>=1.8.6",
    "pip>=25.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tomli>=2.4.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
agentix =  "agentix.__main__"

# packages inside src/*
[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]
developclear = [
    "isort>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

